--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -18,7 +18,9 @@ h4 {
   @apply text-h4;
 }
 
-
+:root {
+  font-family: Nunito Sans, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 * {
   ::-webkit-scrollbar {
