--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -19,24 +19,25 @@ h4 {
 }
 
 :root {
-  font-family: Nunito Sans, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Nunito Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 * {
   ::-webkit-scrollbar {
     width: 0.5rem;
   }
-  
+
   /* Track */
   ::-webkit-scrollbar-track {
     @apply bg-primary-lighter rounded-full;
   }
-  
+
   /* Handle */
   ::-webkit-scrollbar-thumb {
     @apply bg-primary/80 rounded-full;
   }
-  
+
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     @apply bg-primary;
