--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -21,6 +21,7 @@ h4 {
 :root {
   font-family: "Nunito Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
+  @apply text-neutral-dark;
 }
 
 * {
