--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .focus-outline:focus-visible {
+    outline: 2px double theme("colors.semantic.focus");
+  }
+}
+
 h1 {
   @apply text-h1;
 }
